<resources>
    <string name="app_name">Assignment06</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Welcome !!</string>
    <string name="start_button">Start</string>
    <string name="title2">Create User Info</string>
    <string name="name_text">Name:</string>
    <string name="name">Enter Name</string>
    <string name="email_text">Email:</string>
    <string name="email">Enter Email</string>
    <string name="role_text">Role:</string>
    <string name="student_button">Student</string>
    <string name="employee_button">Employee</string>
    <string name="other_button">Other</string>
    <string name="next_button">Next</string>
    <string name="title3">Edit User Info</string>
    <string name="cancel_button">Cancel</string>
    <string name="submit_button">Submit</string>
    <string name="title4">Profile</string>
    <string name="profile_name" />
    <string name="profile_email" />
    <string name="profile_role" />
    <string name="update_button">Update</string>
</resources>