<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment" >
    <TextView
    android:id="@+id/title4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:text="@string/title4"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
android:id="@+id/nameText"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="44dp"
android:layout_marginTop="100dp"
android:text="@string/name_text"
android:textSize="16sp"
app:layout_constraintBottom_toBottomOf="@+id/profileName"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

<TextView
android:id="@+id/profileName"
android:layout_width="219dp"
android:layout_height="32dp"
android:layout_marginTop="32dp"
android:text="@string/profile_name"
android:textSize="16sp"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.256"
app:layout_constraintStart_toEndOf="@+id/nameText"
app:layout_constraintTop_toBottomOf="@+id/title4" />

<TextView
android:id="@+id/emailText"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="44dp"
android:layout_marginTop="36dp"
android:text="@string/email_text"
android:textSize="16sp"
app:layout_constraintBottom_toBottomOf="@+id/profileEmail"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/nameText" />

<TextView
android:id="@+id/profileEmail"
android:layout_width="221dp"
android:layout_height="34dp"
android:layout_marginTop="32dp"
android:text="@string/profile_email"
android:textSize="16sp"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.301"
app:layout_constraintStart_toEndOf="@+id/emailText"
app:layout_constraintTop_toBottomOf="@+id/profileName" />

<TextView
android:id="@+id/roleText"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="44dp"
android:layout_marginTop="44dp"
android:text="@string/role_text"
android:textSize="16sp"
app:layout_constraintBottom_toBottomOf="@+id/profileRole"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/emailText" />

<TextView
android:id="@+id/profileRole"
android:layout_width="220dp"
android:layout_height="35dp"
android:layout_marginTop="44dp"
android:text="@string/profile_role"
android:textSize="16sp"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.38"
app:layout_constraintStart_toEndOf="@+id/roleText"
app:layout_constraintTop_toBottomOf="@+id/profileEmail" />

<Button
android:id="@+id/updateButton"
android:layout_width="380dp"
android:layout_height="wrap_content"
android:layout_marginBottom="16dp"
android:text="@string/update_button"
app:cornerRadius="12dp"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>